Added docker image

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.complete-true{
+.completed-true{
     text-decoration: line-through;
     text-decoration-thickness: 2px;
     text-decoration-color: black;
